src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> PROGRAM ID declarations_opt statements END function_defs_opt
Rule 2     empty -> <empty>
Rule 3     function_defs_opt -> function_defs
Rule 4     function_defs_opt -> empty
Rule 5     function_defs -> function_defs function_def
Rule 6     function_defs -> function_def
Rule 7     statements -> statements statement
Rule 8     statements -> statement
Rule 9     statement -> assignment
Rule 10    statement -> print_stmt
Rule 11    statement -> read_stmt
Rule 12    statement -> call_stmt
Rule 13    statement -> if_stmt
Rule 14    statement -> do_stmt
Rule 15    statement -> goto_stmt
Rule 16    statement -> label_stmt
Rule 17    statement -> continue_stmt
Rule 18    statement -> return_stmt
Rule 19    declarations_opt -> declarations_opt declaration
Rule 20    declarations_opt -> empty
Rule 21    declaration -> type declarator_list
Rule 22    type -> INTEGER
Rule 23    type -> REAL
Rule 24    type -> LOGICAL
Rule 25    declarator_list -> declarator_list COMMA declarator
Rule 26    declarator_list -> declarator
Rule 27    id_list -> declarator_list
Rule 28    declarator -> ID
Rule 29    declarator -> ID LPAREN NUMBER RPAREN
Rule 30    print_stmt -> PRINT TIMES COMMA expression_list
Rule 31    read_stmt -> READ TIMES COMMA varref_list
Rule 32    varref_list -> varref_list COMMA varref
Rule 33    varref_list -> varref
Rule 34    varref -> ID
Rule 35    varref -> ID LPAREN expression_list RPAREN
Rule 36    expression_list -> expression_list COMMA expression
Rule 37    expression_list -> expression
Rule 38    assignment -> varref EQUALS expression
Rule 39    goto_stmt -> GOTO NUMBER
Rule 40    label_stmt -> NUMBER statement
Rule 41    continue_stmt -> CONTINUE
Rule 42    return_stmt -> RETURN
Rule 43    call_stmt -> CALL ID LPAREN empty RPAREN
Rule 44    call_stmt -> CALL ID LPAREN expression_list RPAREN
Rule 45    if_stmt -> IF LPAREN expression RPAREN THEN statements endif
Rule 46    if_stmt -> IF LPAREN expression RPAREN THEN statements ELSE statements endif
Rule 47    endif -> ENDIF
Rule 48    endif -> END
Rule 49    do_stmt -> DO NUMBER ID EQUALS expression COMMA expression
Rule 50    do_stmt -> DO NUMBER ID EQUALS expression COMMA expression COMMA expression
Rule 51    function_def -> type FUNCTION ID LPAREN param_list RPAREN declarations_opt function_items END
Rule 52    subroutine_def -> SUBROUTINE ID LPAREN param_list RPAREN declarations_opt function_items END
Rule 53    param_list -> id_list
Rule 54    param_list -> empty
Rule 55    function_items -> function_items function_item
Rule 56    function_items -> function_item
Rule 57    function_defs -> function_defs subroutine_def
Rule 58    function_defs -> subroutine_def
Rule 59    function_item -> statement
Rule 60    expression -> expression PLUS expression
Rule 61    expression -> expression MINUS expression
Rule 62    expression -> expression TIMES expression
Rule 63    expression -> expression DIVIDE expression
Rule 64    expression -> expression POWER expression
Rule 65    expression -> expression EQ expression
Rule 66    expression -> expression NE expression
Rule 67    expression -> expression LT expression
Rule 68    expression -> expression LE expression
Rule 69    expression -> expression GT expression
Rule 70    expression -> expression GE expression
Rule 71    expression -> expression AND expression
Rule 72    expression -> expression OR expression
Rule 73    expression -> MINUS expression
Rule 74    expression -> NOT expression
Rule 75    expression -> LPAREN expression RPAREN
Rule 76    expression -> ID
Rule 77    expression -> ID LPAREN expression_list RPAREN
Rule 78    expression -> REAL LPAREN expression_list RPAREN
Rule 79    expression -> INTEGER LPAREN expression_list RPAREN
Rule 80    expression -> literal
Rule 81    literal -> NUMBER
Rule 82    literal -> STRING
Rule 83    literal -> TRUE
Rule 84    literal -> FALSE

Terminals, with rules where they appear

AND                  : 71
CALL                 : 43 44
COMMA                : 25 30 31 32 36 49 50 50
CONTINUE             : 41
DIVIDE               : 63
DO                   : 49 50
ELSE                 : 46
END                  : 1 48 51 52
ENDIF                : 47
EQ                   : 65
EQUALS               : 38 49 50
FALSE                : 84
FUNCTION             : 51
GE                   : 70
GOTO                 : 39
GT                   : 69
ID                   : 1 28 29 34 35 43 44 49 50 51 52 76 77
IF                   : 45 46
INTEGER              : 22 79
LE                   : 68
LOGICAL              : 24
LPAREN               : 29 35 43 44 45 46 51 52 75 77 78 79
LT                   : 67
MINUS                : 61 73
NE                   : 66
NOT                  : 74
NUMBER               : 29 39 40 49 50 81
OR                   : 72
PLUS                 : 60
POWER                : 64
PRINT                : 30
PROGRAM              : 1
READ                 : 31
REAL                 : 23 78
RETURN               : 42
RPAREN               : 29 35 43 44 45 46 51 52 75 77 78 79
STRING               : 82
SUBROUTINE           : 52
THEN                 : 45 46
TIMES                : 30 31 62
TRUE                 : 83
error                : 

Nonterminals, with rules where they appear

assignment           : 9
call_stmt            : 12
continue_stmt        : 17
declaration          : 19
declarations_opt     : 1 19 51 52
declarator           : 25 26
declarator_list      : 21 25 27
do_stmt              : 14
empty                : 4 20 43 54
endif                : 45 46
expression           : 36 37 38 45 46 49 49 50 50 50 60 60 61 61 62 62 63 63 64 64 65 65 66 66 67 67 68 68 69 69 70 70 71 71 72 72 73 74 75
expression_list      : 30 35 36 44 77 78 79
function_def         : 5 6
function_defs        : 3 5 57
function_defs_opt    : 1
function_item        : 55 56
function_items       : 51 52 55
goto_stmt            : 15
id_list              : 53
if_stmt              : 13
label_stmt           : 16
literal              : 80
param_list           : 51 52
print_stmt           : 10
program              : 0
read_stmt            : 11
return_stmt          : 18
statement            : 7 8 40 59
statements           : 1 7 45 46 46
subroutine_def       : 57 58
type                 : 21 51
varref               : 32 33 38
varref_list          : 31 32

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . PROGRAM ID declarations_opt statements END function_defs_opt

    PROGRAM         shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> PROGRAM . ID declarations_opt statements END function_defs_opt

    ID              shift and go to state 3


state 3

    (1) program -> PROGRAM ID . declarations_opt statements END function_defs_opt
    (19) declarations_opt -> . declarations_opt declaration
    (20) declarations_opt -> . empty
    (2) empty -> .

    INTEGER         reduce using rule 2 (empty -> .)
    REAL            reduce using rule 2 (empty -> .)
    LOGICAL         reduce using rule 2 (empty -> .)
    PRINT           reduce using rule 2 (empty -> .)
    READ            reduce using rule 2 (empty -> .)
    CALL            reduce using rule 2 (empty -> .)
    IF              reduce using rule 2 (empty -> .)
    DO              reduce using rule 2 (empty -> .)
    GOTO            reduce using rule 2 (empty -> .)
    NUMBER          reduce using rule 2 (empty -> .)
    CONTINUE        reduce using rule 2 (empty -> .)
    RETURN          reduce using rule 2 (empty -> .)
    ID              reduce using rule 2 (empty -> .)

    declarations_opt               shift and go to state 4
    empty                          shift and go to state 5

state 4

    (1) program -> PROGRAM ID declarations_opt . statements END function_defs_opt
    (19) declarations_opt -> declarations_opt . declaration
    (7) statements -> . statements statement
    (8) statements -> . statement
    (21) declaration -> . type declarator_list
    (9) statement -> . assignment
    (10) statement -> . print_stmt
    (11) statement -> . read_stmt
    (12) statement -> . call_stmt
    (13) statement -> . if_stmt
    (14) statement -> . do_stmt
    (15) statement -> . goto_stmt
    (16) statement -> . label_stmt
    (17) statement -> . continue_stmt
    (18) statement -> . return_stmt
    (22) type -> . INTEGER
    (23) type -> . REAL
    (24) type -> . LOGICAL
    (38) assignment -> . varref EQUALS expression
    (30) print_stmt -> . PRINT TIMES COMMA expression_list
    (31) read_stmt -> . READ TIMES COMMA varref_list
    (43) call_stmt -> . CALL ID LPAREN empty RPAREN
    (44) call_stmt -> . CALL ID LPAREN expression_list RPAREN
    (45) if_stmt -> . IF LPAREN expression RPAREN THEN statements endif
    (46) if_stmt -> . IF LPAREN expression RPAREN THEN statements ELSE statements endif
    (49) do_stmt -> . DO NUMBER ID EQUALS expression COMMA expression
    (50) do_stmt -> . DO NUMBER ID EQUALS expression COMMA expression COMMA expression
    (39) goto_stmt -> . GOTO NUMBER
    (40) label_stmt -> . NUMBER statement
    (41) continue_stmt -> . CONTINUE
    (42) return_stmt -> . RETURN
    (34) varref -> . ID
    (35) varref -> . ID LPAREN expression_list RPAREN

    INTEGER         shift and go to state 21
    REAL            shift and go to state 22
    LOGICAL         shift and go to state 23
    PRINT           shift and go to state 25
    READ            shift and go to state 26
    CALL            shift and go to state 27
    IF              shift and go to state 28
    DO              shift and go to state 29
    GOTO            shift and go to state 31
    NUMBER          shift and go to state 30
    CONTINUE        shift and go to state 32
    RETURN          shift and go to state 33
    ID              shift and go to state 6

    statements                     shift and go to state 7
    declaration                    shift and go to state 8
    statement                      shift and go to state 9
    type                           shift and go to state 10
    assignment                     shift and go to state 11
    print_stmt                     shift and go to state 12
    read_stmt                      shift and go to state 13
    call_stmt                      shift and go to state 14
    if_stmt                        shift and go to state 15
    do_stmt                        shift and go to state 16
    goto_stmt                      shift and go to state 17
    label_stmt                     shift and go to state 18
    continue_stmt                  shift and go to state 19
    return_stmt                    shift and go to state 20
    varref                         shift and go to state 24

state 5

    (20) declarations_opt -> empty .

    INTEGER         reduce using rule 20 (declarations_opt -> empty .)
    REAL            reduce using rule 20 (declarations_opt -> empty .)
    LOGICAL         reduce using rule 20 (declarations_opt -> empty .)
    PRINT           reduce using rule 20 (declarations_opt -> empty .)
    READ            reduce using rule 20 (declarations_opt -> empty .)
    CALL            reduce using rule 20 (declarations_opt -> empty .)
    IF              reduce using rule 20 (declarations_opt -> empty .)
    DO              reduce using rule 20 (declarations_opt -> empty .)
    GOTO            reduce using rule 20 (declarations_opt -> empty .)
    NUMBER          reduce using rule 20 (declarations_opt -> empty .)
    CONTINUE        reduce using rule 20 (declarations_opt -> empty .)
    RETURN          reduce using rule 20 (declarations_opt -> empty .)
    ID              reduce using rule 20 (declarations_opt -> empty .)


state 6

    (34) varref -> ID .
    (35) varref -> ID . LPAREN expression_list RPAREN

    EQUALS          reduce using rule 34 (varref -> ID .)
    COMMA           reduce using rule 34 (varref -> ID .)
    END             reduce using rule 34 (varref -> ID .)
    PRINT           reduce using rule 34 (varref -> ID .)
    READ            reduce using rule 34 (varref -> ID .)
    CALL            reduce using rule 34 (varref -> ID .)
    IF              reduce using rule 34 (varref -> ID .)
    DO              reduce using rule 34 (varref -> ID .)
    GOTO            reduce using rule 34 (varref -> ID .)
    NUMBER          reduce using rule 34 (varref -> ID .)
    CONTINUE        reduce using rule 34 (varref -> ID .)
    RETURN          reduce using rule 34 (varref -> ID .)
    ID              reduce using rule 34 (varref -> ID .)
    ELSE            reduce using rule 34 (varref -> ID .)
    ENDIF           reduce using rule 34 (varref -> ID .)
    LPAREN          shift and go to state 34


state 7

    (1) program -> PROGRAM ID declarations_opt statements . END function_defs_opt
    (7) statements -> statements . statement
    (9) statement -> . assignment
    (10) statement -> . print_stmt
    (11) statement -> . read_stmt
    (12) statement -> . call_stmt
    (13) statement -> . if_stmt
    (14) statement -> . do_stmt
    (15) statement -> . goto_stmt
    (16) statement -> . label_stmt
    (17) statement -> . continue_stmt
    (18) statement -> . return_stmt
    (38) assignment -> . varref EQUALS expression
    (30) print_stmt -> . PRINT TIMES COMMA expression_list
    (31) read_stmt -> . READ TIMES COMMA varref_list
    (43) call_stmt -> . CALL ID LPAREN empty RPAREN
    (44) call_stmt -> . CALL ID LPAREN expression_list RPAREN
    (45) if_stmt -> . IF LPAREN expression RPAREN THEN statements endif
    (46) if_stmt -> . IF LPAREN expression RPAREN THEN statements ELSE statements endif
    (49) do_stmt -> . DO NUMBER ID EQUALS expression COMMA expression
    (50) do_stmt -> . DO NUMBER ID EQUALS expression COMMA expression COMMA expression
    (39) goto_stmt -> . GOTO NUMBER
    (40) label_stmt -> . NUMBER statement
    (41) continue_stmt -> . CONTINUE
    (42) return_stmt -> . RETURN
    (34) varref -> . ID
    (35) varref -> . ID LPAREN expression_list RPAREN

    END             shift and go to state 35
    PRINT           shift and go to state 25
    READ            shift and go to state 26
    CALL            shift and go to state 27
    IF              shift and go to state 28
    DO              shift and go to state 29
    GOTO            shift and go to state 31
    NUMBER          shift and go to state 30
    CONTINUE        shift and go to state 32
    RETURN          shift and go to state 33
    ID              shift and go to state 6

    statement                      shift and go to state 36
    assignment                     shift and go to state 11
    print_stmt                     shift and go to state 12
    read_stmt                      shift and go to state 13
    call_stmt                      shift and go to state 14
    if_stmt                        shift and go to state 15
    do_stmt                        shift and go to state 16
    goto_stmt                      shift and go to state 17
    label_stmt                     shift and go to state 18
    continue_stmt                  shift and go to state 19
    return_stmt                    shift and go to state 20
    varref                         shift and go to state 24

state 8

    (19) declarations_opt -> declarations_opt declaration .

    INTEGER         reduce using rule 19 (declarations_opt -> declarations_opt declaration .)
    REAL            reduce using rule 19 (declarations_opt -> declarations_opt declaration .)
    LOGICAL         reduce using rule 19 (declarations_opt -> declarations_opt declaration .)
    PRINT           reduce using rule 19 (declarations_opt -> declarations_opt declaration .)
    READ            reduce using rule 19 (declarations_opt -> declarations_opt declaration .)
    CALL            reduce using rule 19 (declarations_opt -> declarations_opt declaration .)
    IF              reduce using rule 19 (declarations_opt -> declarations_opt declaration .)
    DO              reduce using rule 19 (declarations_opt -> declarations_opt declaration .)
    GOTO            reduce using rule 19 (declarations_opt -> declarations_opt declaration .)
    NUMBER          reduce using rule 19 (declarations_opt -> declarations_opt declaration .)
    CONTINUE        reduce using rule 19 (declarations_opt -> declarations_opt declaration .)
    RETURN          reduce using rule 19 (declarations_opt -> declarations_opt declaration .)
    ID              reduce using rule 19 (declarations_opt -> declarations_opt declaration .)


state 9

    (8) statements -> statement .

    END             reduce using rule 8 (statements -> statement .)
    PRINT           reduce using rule 8 (statements -> statement .)
    READ            reduce using rule 8 (statements -> statement .)
    CALL            reduce using rule 8 (statements -> statement .)
    IF              reduce using rule 8 (statements -> statement .)
    DO              reduce using rule 8 (statements -> statement .)
    GOTO            reduce using rule 8 (statements -> statement .)
    NUMBER          reduce using rule 8 (statements -> statement .)
    CONTINUE        reduce using rule 8 (statements -> statement .)
    RETURN          reduce using rule 8 (statements -> statement .)
    ID              reduce using rule 8 (statements -> statement .)
    ELSE            reduce using rule 8 (statements -> statement .)
    ENDIF           reduce using rule 8 (statements -> statement .)


state 10

    (21) declaration -> type . declarator_list
    (25) declarator_list -> . declarator_list COMMA declarator
    (26) declarator_list -> . declarator
    (28) declarator -> . ID
    (29) declarator -> . ID LPAREN NUMBER RPAREN

    ID              shift and go to state 39

    declarator_list                shift and go to state 37
    declarator                     shift and go to state 38

state 11

    (9) statement -> assignment .

    END             reduce using rule 9 (statement -> assignment .)
    PRINT           reduce using rule 9 (statement -> assignment .)
    READ            reduce using rule 9 (statement -> assignment .)
    CALL            reduce using rule 9 (statement -> assignment .)
    IF              reduce using rule 9 (statement -> assignment .)
    DO              reduce using rule 9 (statement -> assignment .)
    GOTO            reduce using rule 9 (statement -> assignment .)
    NUMBER          reduce using rule 9 (statement -> assignment .)
    CONTINUE        reduce using rule 9 (statement -> assignment .)
    RETURN          reduce using rule 9 (statement -> assignment .)
    ID              reduce using rule 9 (statement -> assignment .)
    ELSE            reduce using rule 9 (statement -> assignment .)
    ENDIF           reduce using rule 9 (statement -> assignment .)


state 12

    (10) statement -> print_stmt .

    END             reduce using rule 10 (statement -> print_stmt .)
    PRINT           reduce using rule 10 (statement -> print_stmt .)
    READ            reduce using rule 10 (statement -> print_stmt .)
    CALL            reduce using rule 10 (statement -> print_stmt .)
    IF              reduce using rule 10 (statement -> print_stmt .)
    DO              reduce using rule 10 (statement -> print_stmt .)
    GOTO            reduce using rule 10 (statement -> print_stmt .)
    NUMBER          reduce using rule 10 (statement -> print_stmt .)
    CONTINUE        reduce using rule 10 (statement -> print_stmt .)
    RETURN          reduce using rule 10 (statement -> print_stmt .)
    ID              reduce using rule 10 (statement -> print_stmt .)
    ELSE            reduce using rule 10 (statement -> print_stmt .)
    ENDIF           reduce using rule 10 (statement -> print_stmt .)


state 13

    (11) statement -> read_stmt .

    END             reduce using rule 11 (statement -> read_stmt .)
    PRINT           reduce using rule 11 (statement -> read_stmt .)
    READ            reduce using rule 11 (statement -> read_stmt .)
    CALL            reduce using rule 11 (statement -> read_stmt .)
    IF              reduce using rule 11 (statement -> read_stmt .)
    DO              reduce using rule 11 (statement -> read_stmt .)
    GOTO            reduce using rule 11 (statement -> read_stmt .)
    NUMBER          reduce using rule 11 (statement -> read_stmt .)
    CONTINUE        reduce using rule 11 (statement -> read_stmt .)
    RETURN          reduce using rule 11 (statement -> read_stmt .)
    ID              reduce using rule 11 (statement -> read_stmt .)
    ELSE            reduce using rule 11 (statement -> read_stmt .)
    ENDIF           reduce using rule 11 (statement -> read_stmt .)


state 14

    (12) statement -> call_stmt .

    END             reduce using rule 12 (statement -> call_stmt .)
    PRINT           reduce using rule 12 (statement -> call_stmt .)
    READ            reduce using rule 12 (statement -> call_stmt .)
    CALL            reduce using rule 12 (statement -> call_stmt .)
    IF              reduce using rule 12 (statement -> call_stmt .)
    DO              reduce using rule 12 (statement -> call_stmt .)
    GOTO            reduce using rule 12 (statement -> call_stmt .)
    NUMBER          reduce using rule 12 (statement -> call_stmt .)
    CONTINUE        reduce using rule 12 (statement -> call_stmt .)
    RETURN          reduce using rule 12 (statement -> call_stmt .)
    ID              reduce using rule 12 (statement -> call_stmt .)
    ELSE            reduce using rule 12 (statement -> call_stmt .)
    ENDIF           reduce using rule 12 (statement -> call_stmt .)


state 15

    (13) statement -> if_stmt .

    END             reduce using rule 13 (statement -> if_stmt .)
    PRINT           reduce using rule 13 (statement -> if_stmt .)
    READ            reduce using rule 13 (statement -> if_stmt .)
    CALL            reduce using rule 13 (statement -> if_stmt .)
    IF              reduce using rule 13 (statement -> if_stmt .)
    DO              reduce using rule 13 (statement -> if_stmt .)
    GOTO            reduce using rule 13 (statement -> if_stmt .)
    NUMBER          reduce using rule 13 (statement -> if_stmt .)
    CONTINUE        reduce using rule 13 (statement -> if_stmt .)
    RETURN          reduce using rule 13 (statement -> if_stmt .)
    ID              reduce using rule 13 (statement -> if_stmt .)
    ELSE            reduce using rule 13 (statement -> if_stmt .)
    ENDIF           reduce using rule 13 (statement -> if_stmt .)


state 16

    (14) statement -> do_stmt .

    END             reduce using rule 14 (statement -> do_stmt .)
    PRINT           reduce using rule 14 (statement -> do_stmt .)
    READ            reduce using rule 14 (statement -> do_stmt .)
    CALL            reduce using rule 14 (statement -> do_stmt .)
    IF              reduce using rule 14 (statement -> do_stmt .)
    DO              reduce using rule 14 (statement -> do_stmt .)
    GOTO            reduce using rule 14 (statement -> do_stmt .)
    NUMBER          reduce using rule 14 (statement -> do_stmt .)
    CONTINUE        reduce using rule 14 (statement -> do_stmt .)
    RETURN          reduce using rule 14 (statement -> do_stmt .)
    ID              reduce using rule 14 (statement -> do_stmt .)
    ELSE            reduce using rule 14 (statement -> do_stmt .)
    ENDIF           reduce using rule 14 (statement -> do_stmt .)


state 17

    (15) statement -> goto_stmt .

    END             reduce using rule 15 (statement -> goto_stmt .)
    PRINT           reduce using rule 15 (statement -> goto_stmt .)
    READ            reduce using rule 15 (statement -> goto_stmt .)
    CALL            reduce using rule 15 (statement -> goto_stmt .)
    IF              reduce using rule 15 (statement -> goto_stmt .)
    DO              reduce using rule 15 (statement -> goto_stmt .)
    GOTO            reduce using rule 15 (statement -> goto_stmt .)
    NUMBER          reduce using rule 15 (statement -> goto_stmt .)
    CONTINUE        reduce using rule 15 (statement -> goto_stmt .)
    RETURN          reduce using rule 15 (statement -> goto_stmt .)
    ID              reduce using rule 15 (statement -> goto_stmt .)
    ELSE            reduce using rule 15 (statement -> goto_stmt .)
    ENDIF           reduce using rule 15 (statement -> goto_stmt .)


state 18

    (16) statement -> label_stmt .
